Updated positioning for submit and inputtext, added radiogroup and radiobuttons. Added handleClick  function which runs when user clicks submit button and checks the operation from RadioButtons and performs the proper logical operation (i.e addition, subtraction, mult), and updates the TextView display to show the result. The function also handles user error i.e dividng by zero

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name = "submit_button">Calculate</string>
+    <string name = "multiplication_select">*</string>
+    <string name = "addition_select">+</string>display_num
+    <string name = "division_select">/</string>
+    <string name = "subtraction_select">-</string>
+
 </resources>
